GUI, multithreading, textured material, glossy material, mirror material - textures slightly bugged